--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: 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
-          GIST_ID: 1f3d3e68ecfac5c7258c376b0a9cf4cc
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIST_ID: 9842e074b8ee46aef76fd0d493bae0ed
           TIMEZONE: Asia/Taipei
